fix: fix page width jumping after loading movie list

--- a/src/components/MovieListPage/MovieListPage.scss
+++ b/src/components/MovieListPage/MovieListPage.scss
@@ -6,6 +6,7 @@
   align-items: stretch;
   justify-content: stretch;
   width: 100%;
+  padding-left: calc(100vw - 100%);
 
   &__title {
     font-size: 2rem;
